After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777745 - Various distcheck fixes
Various distcheck fixes
Status: RESOLVED FIXED
Product: geocode-glib
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: geocode-glib maintainer(s)
geocode-glib maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-01-25 14:32 UTC by Philip Withnall
Modified: 2017-01-27 16:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
build: Drop Makefile.decl in favour of glib-tap.mk (3.15 KB, patch)
2017-01-25 14:32 UTC, Philip Withnall
committed Details | Review
docs: Add missing XML files to the top-level documentation file (932 bytes, patch)
2017-01-25 14:32 UTC, Philip Withnall
committed Details | Review
docs: Change UNRELEASED ‘Since’ tags to 3.23.1 for the next release (5.26 KB, patch)
2017-01-25 14:32 UTC, Philip Withnall
committed Details | Review
docs: Add a section overview for geocode-nominatim (1.26 KB, patch)
2017-01-25 14:33 UTC, Philip Withnall
committed Details | Review
docs: Document some GEOCODE_TYPE_* macros (2.55 KB, patch)
2017-01-25 14:33 UTC, Philip Withnall
committed Details | Review
docs: Ignore geocode-enum-types.h in the documentation (903 bytes, patch)
2017-01-25 14:33 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2017-01-25 14:32:41 UTC
With these fixes `make distcheck` passes successfully. Just in time for you to do a 3.23.1 release (whenever you want)!
Comment 1 Philip Withnall 2017-01-25 14:32:46 UTC
Created attachment 344224 [details] [review]
build: Drop Makefile.decl in favour of glib-tap.mk

We use glib-tap.mk for testing now; Makefile.decl is deprecated and was
broken (`make test` did not work). It was also breaking `make distcheck`.
Comment 2 Philip Withnall 2017-01-25 14:32:52 UTC
Created attachment 344225 [details] [review]
docs: Add missing XML files to the top-level documentation file

These were missed out when added to the documentation build earlier.
Comment 3 Philip Withnall 2017-01-25 14:32:59 UTC
Created attachment 344227 [details] [review]
docs: Change UNRELEASED ‘Since’ tags to 3.23.1 for the next release
Comment 4 Philip Withnall 2017-01-25 14:33:05 UTC
Created attachment 344228 [details] [review]
docs: Add a section overview for geocode-nominatim

gtk-doc’s checks were fretting about it being missing.
Comment 5 Philip Withnall 2017-01-25 14:33:11 UTC
Created attachment 344229 [details] [review]
docs: Document some GEOCODE_TYPE_* macros

Normally these don’t need to be documented, but gtk-doc wants
documentation comments for these ones for some reason. This is probably
a bug in how gtk-doc detects whether a symbol is interesting
(potentially due to use of G_DECLARE_[DERIVABLE|FINAL]_TYPE?). Once it’s
fixed in gtk-doc upstream, we can remove these documentation comments.
Comment 6 Philip Withnall 2017-01-25 14:33:17 UTC
Created attachment 344230 [details] [review]
docs: Ignore geocode-enum-types.h in the documentation

It’s a generated file and there’s nothing documented in there, so it
results in an empty page in the documentation.
Comment 7 Bastien Nocera 2017-01-25 16:22:55 UTC
Review of attachment 344224 [details] [review]:

Is glib-tap.mk installed by the autogen.sh script? It's not in the patch
Comment 8 Bastien Nocera 2017-01-25 16:23:18 UTC
Review of attachment 344225 [details] [review]:

Sure.
Comment 9 Bastien Nocera 2017-01-25 16:23:56 UTC
Review of attachment 344227 [details] [review]:

::: geocode-glib/geocode-bounding-box.c
@@ +286,3 @@
  *
  * Returns: %TRUE if the instances are equal, %FALSE otherwise
+ * Since: 3.23.1

Those are supposed to be stable version, so please use "3.24" instead.
Comment 10 Bastien Nocera 2017-01-25 16:24:40 UTC
Review of attachment 344228 [details] [review]:

::: geocode-glib/geocode-nominatim.c
@@ +41,3 @@
+ * [OSM Nominatim APIs](http://wiki.openstreetmap.org/wiki/Nominatim) exposed
+ * by a Nominatim server at a given URI. By default, the GNOME Nominatim server
+ * is used, but others may be configured.

another one may be configured?
Comment 11 Bastien Nocera 2017-01-25 16:25:21 UTC
Review of attachment 344229 [details] [review]:

::: geocode-glib/geocode-backend.h
@@ +48,3 @@
+ * See #GeocodeBackend.
+ *
+ * Since: 3.23.1

Same thing about the version numbers.
Comment 12 Bastien Nocera 2017-01-25 16:25:39 UTC
Review of attachment 344230 [details] [review]:

Yep.
Comment 13 Philip Withnall 2017-01-25 17:10:54 UTC
(In reply to Bastien Nocera from comment #7)
> Review of attachment 344224 [details] [review] [review]:
> 
> Is glib-tap.mk installed by the autogen.sh script? It's not in the patch

It’s been in git for a while: https://git.gnome.org/browse/geocode-glib/tree/glib-tap.mk

(In reply to Bastien Nocera from comment #10)
> Review of attachment 344228 [details] [review] [review]:
> 
> ::: geocode-glib/geocode-nominatim.c
> @@ +41,3 @@
> + * [OSM Nominatim APIs](http://wiki.openstreetmap.org/wiki/Nominatim)
> exposed
> + * by a Nominatim server at a given URI. By default, the GNOME Nominatim
> server
> + * is used, but others may be configured.
> 
> another one may be configured?

As many may be configured as you create instances of #GeocodeNominatim, right?

(In reply to Bastien Nocera from comment #9)
> Review of attachment 344227 [details] [review] [review]:
> 
> ::: geocode-glib/geocode-bounding-box.c
> @@ +286,3 @@
>   *
>   * Returns: %TRUE if the instances are equal, %FALSE otherwise
> + * Since: 3.23.1
> 
> Those are supposed to be stable version, so please use "3.24" instead.

That’s not what the rest of the ‘Since’ tags I’ve added to geocode-glib recently do. I also think this is a pointless loss of accuracy: having the unstable version number in there is useful for development of reverse-dependent applications through that unstable cycle. 3.24 hasn’t been released yet: if we release 3.23.1 now, and then I go and write MyNewGeocodingApp, I’m going to have to dredge through geocode-glib’s commit history to find which 3.23.x release is actually meant by ‘3.24’.
Comment 14 Bastien Nocera 2017-01-27 15:50:03 UTC
(In reply to Philip Withnall from comment #13)
> (In reply to Bastien Nocera from comment #7)
> > Review of attachment 344224 [details] [review] [review] [review]:
> > 
> > Is glib-tap.mk installed by the autogen.sh script? It's not in the patch
> 
> It’s been in git for a while:
> https://git.gnome.org/browse/geocode-glib/tree/glib-tap.mk

Ok.

> (In reply to Bastien Nocera from comment #10)
> > Review of attachment 344228 [details] [review] [review] [review]:
> > 
> > ::: geocode-glib/geocode-nominatim.c
> > @@ +41,3 @@
> > + * [OSM Nominatim APIs](http://wiki.openstreetmap.org/wiki/Nominatim)
> > exposed
> > + * by a Nominatim server at a given URI. By default, the GNOME Nominatim
> > server
> > + * is used, but others may be configured.
> > 
> > another one may be configured?
> 
> As many may be configured as you create instances of #GeocodeNominatim,
> right?

It just makes me think that I can configure multiple servers for each instance. Maybe that's just me.

> (In reply to Bastien Nocera from comment #9)
> > Review of attachment 344227 [details] [review] [review] [review]:
> > 
> > ::: geocode-glib/geocode-bounding-box.c
> > @@ +286,3 @@
> >   *
> >   * Returns: %TRUE if the instances are equal, %FALSE otherwise
> > + * Since: 3.23.1
> > 
> > Those are supposed to be stable version, so please use "3.24" instead.
> 
> That’s not what the rest of the ‘Since’ tags I’ve added to geocode-glib
> recently do. I also think this is a pointless loss of accuracy: having the
> unstable version number in there is useful for development of
> reverse-dependent applications through that unstable cycle. 3.24 hasn’t been
> released yet: if we release 3.23.1 now, and then I go and write
> MyNewGeocodingApp, I’m going to have to dredge through geocode-glib’s commit
> history to find which 3.23.x release is actually meant by ‘3.24’.

Ok, fair enough.
Comment 15 Philip Withnall 2017-01-27 16:07:59 UTC
(In reply to Bastien Nocera from comment #14)
> > (In reply to Bastien Nocera from comment #10)
> > > Review of attachment 344228 [details] [review] [review] [review] [review]:
> > > 
> > > ::: geocode-glib/geocode-nominatim.c
> > > @@ +41,3 @@
> > > + * [OSM Nominatim APIs](http://wiki.openstreetmap.org/wiki/Nominatim)
> > > exposed
> > > + * by a Nominatim server at a given URI. By default, the GNOME Nominatim
> > > server
> > > + * is used, but others may be configured.
> > > 
> > > another one may be configured?
> > 
> > As many may be configured as you create instances of #GeocodeNominatim,
> > right?
> 
> It just makes me think that I can configure multiple servers for each
> instance. Maybe that's just me.

How about “By default, the GNOME Nominatim server is used, but other server details may be given when constructing a #GeocodeNominatim.”?
Comment 16 Philip Withnall 2017-01-27 16:08:28 UTC
Comment on attachment 344224 [details] [review]
build: Drop Makefile.decl in favour of glib-tap.mk

Accepting as per comment #14.
Comment 17 Philip Withnall 2017-01-27 16:08:47 UTC
Comment on attachment 344227 [details] [review]
docs: Change UNRELEASED ‘Since’ tags to 3.23.1 for the next release

Accepting as per comment #14.
Comment 18 Philip Withnall 2017-01-27 16:09:33 UTC
Comment on attachment 344229 [details] [review]
docs: Document some GEOCODE_TYPE_* macros

Accepting as per comment #14.
Comment 19 Bastien Nocera 2017-01-27 16:12:26 UTC
(In reply to Philip Withnall from comment #15)
> (In reply to Bastien Nocera from comment #14)
> > > (In reply to Bastien Nocera from comment #10)
> > > > Review of attachment 344228 [details] [review] [review] [review] [review] [review]:
> > > > 
> > > > ::: geocode-glib/geocode-nominatim.c
> > > > @@ +41,3 @@
> > > > + * [OSM Nominatim APIs](http://wiki.openstreetmap.org/wiki/Nominatim)
> > > > exposed
> > > > + * by a Nominatim server at a given URI. By default, the GNOME Nominatim
> > > > server
> > > > + * is used, but others may be configured.
> > > > 
> > > > another one may be configured?
> > > 
> > > As many may be configured as you create instances of #GeocodeNominatim,
> > > right?
> > 
> > It just makes me think that I can configure multiple servers for each
> > instance. Maybe that's just me.
> 
> How about “By default, the GNOME Nominatim server is used, but other server
> details may be given when constructing a #GeocodeNominatim.”?

Sure, a bit better.
Comment 20 Philip Withnall 2017-01-27 16:18:59 UTC
Pushed with that fix, thanks.

Attachment 344224 [details] pushed as 305e168 - build: Drop Makefile.decl in favour of glib-tap.mk
Attachment 344225 [details] pushed as 0cb8aaf - docs: Add missing XML files to the top-level documentation file
Attachment 344227 [details] pushed as d02f56c - docs: Change UNRELEASED ‘Since’ tags to 3.23.1 for the next release
Attachment 344228 [details] pushed as 7aaf923 - docs: Add a section overview for geocode-nominatim
Attachment 344229 [details] pushed as 618b8c2 - docs: Document some GEOCODE_TYPE_* macros
Attachment 344230 [details] pushed as 712def9 - docs: Ignore geocode-enum-types.h in the documentation