geocode-glib/geocode-location.c
@@ -132,7 +132,7 @@ geocode_location_get_property (GObject    *object,
  * Both instances must be non-%NULL.
  *
  * Returns: %TRUE if the instances are equal, %FALSE otherwise
- * Since: UNRELEASED
+ * Since: 3.23.1
  */
 gboolean
 geocode_location_equal (GeocodeLocation *a,
